# lsml-distributed-training

./: .env  .gitignore  Makefile  README.md  homework.md  pyproject.toml  seminar-01.md
common/: __init__.py  data.py  dist_utils.py  logging.py
scripts/: train_ddp.py  train_single.py
