[project]
name = "lsml-distributed-training"
version = "0.1.0"
description = ""
authors = [
    { name = "Dmitry Nesterov", email = "dnesterovand@ozon.ru" },
]
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "datasets==4.1.1",
    "huggingface-hub>=0.36.2",
    "jupyterlab>=4.5.6",
    "mypy>=1.18.2",
    "ruff>=0.14.2",
    "torch==2.8.0",
    "tqdm>=4.67.3",
    "transformers==4.57.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["common"]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "off"

[tool.ruff]
line-length = 120
exclude = ["**/*.ipynb"]
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",    # Missing docstring in public module
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "D104",    # Missing docstring in public package
    "D105",    # Missing docstring in magic method
    "D107",    # Missing docstring in public package
    "D203",    # incorrect-blank-line-before-class
    "D212",    # multi-line-summary-first-line
    "COM812",  # conflict with formatter
    "G004",    # Logging statement uses f-string
    "FBT001",  # Boolean-typed positional argument in function definition
    "FBT002",  # Boolean default positional argument in function definition
    "PLR0913", # Too many arguments in function definition
    "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
    "RUF001",  # Cyrillic vs latin letters
    "RUF002",  # Cyrillic vs latin letters
    "RUF003",  # Cyrillic vs latin letters
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401", # Unused imports
]
"scripts/*.py" = [
    "INP001", # File is part of an implicit namespace package
    "T201",   # `print` found
]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "double"

[tool.mypy]
disallow_untyped_calls = false
disallow_untyped_defs = false
ignore_missing_imports = true
strict_equality = true
warn_no_return = false
warn_redundant_casts = true
warn_return_any = false
warn_unreachable = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
